# pywinwing

./: .gitignore  404.html  CHANGELOG.md  README.md  class hierarchy.drawio  device-format-documentation.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pywinwing architecture.drawio  webapi-commands.json  webapi-datarefs.json
.github/workflows/: ci.yaml
acfdev/acfdev/: b738.py
changelog/: index.html
devnotes/: index.html
docs/: changelog.md  devnotes.md  index.md  reference.md  remote.md  report.md  usage.md  variants.md
extensions/: README.md
extensions/acfdev/acfdev/: MCDU_GlidingKiwi_A20N.yaml  MCDU_GlidingKiwi_A346.yaml  MCDU_GlidingKiwi_a319.yaml  MCDU_GlidingKiwi_a320.yaml  MCDU_GlidingKiwi_a340.yaml  b738.py  b738.yaml
extensions/devdev/devdev/: fakedev.py
reference/: index.html
remote/: index.html
report/: index.html
search/: search_index.json
src/winwing/: __init__.py  cli.py  device_manager.py
src/winwing/assets/: MCDU_FlightFactor and ToLiss_a359.yaml  MCDU_Gliding Kiwi_A21N-old.yaml  MCDU_Gliding Kiwi_A21N.yaml  MCDU_Gliding Kiwi_A321-old.yaml  MCDU_Gliding Kiwi_a321.yaml  MCDU_Gliding Kiwi_a339-old.yaml  MCDU_Gliding Kiwi_a339.yaml  MCDU_GlidingKiwi_a339.yaml  MCDU_Laminar_a333.yaml  MCDU_toliss_a339.yaml  a339.yaml  device-format-documentation.yml
src/winwing/devices/: __init__.py  devicedriver.py  hiddevice.py  winwing.py
src/winwing/devices/datmpl/: README.md  __init__.py  aircraft.py  datmpl.py  device.py
src/winwing/helpers/: __init__.py  aircraft.py  report.py
usage/: index.html
variants/: index.html
(+22 files in other folders)
