[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/winwing/__init__.py"

# ###########################################
#
# Project
#
[project]
name = "winwing"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" }
]

description = "Interface Winwing devices to X-Plane Flight Simulator"

readme = "README.md"

license = {file = "LICENCE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

requires-python = ">=3.12"

dependencies = [
    "xpwebapi @ git+https://github.com/devleaks/xplane-webapi.git",
    "hid~=1.0" # https://github.com/apmorton/pyhidapi

]

dynamic = [
    "version"
]

[project.urls]
Homepage = "https://devleaks.github.io/pywinwing/"
Documentation = "https://devleaks.github.io/pywinwing/"
Issues = "https://github.com/devleaks/pywinwing/issues"
Source = "https://github.com/devleaks/pywinwing"

[project.scripts]
winwing-cli = "winwing.cli:main"


# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

